[package]
name = "moduforge-macros"
version = {workspace=true}
edition = {workspace=true}
description = "moduforge 宏定义"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}
[lib]
name = "mf_macro"
path="./src/lib.rs"


[dependencies]
anyhow = {workspace=true}
moduforge-model = {version = "0.4.10", path = "../model"}
moduforge-state = {version = "0.4.10", path = "../state"}
moduforge-transform = {version = "0.4.10", path = "../transform"}
moduforge-core = {version = "0.4.10", path = "../core"}

