[package]
name = "moduforge-search"
version = { workspace = true }
edition = { workspace = true }
description = "moduforge 搜索服务 - SQLite 后端"
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "mf_search"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
imbl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

# core model & ops
moduforge-model = { workspace = true }
moduforge-transform = { workspace = true }
moduforge-state = { workspace = true }

# SQLite backend
rbs = { workspace = true }
rbatis = { workspace = true }
rbdc-sqlite = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
dev-tracing = ["tracing", "tracing/max_level_trace"]
default = []
