[package]
name = "moduforge-transmission"
version = {workspace=true}
edition = {workspace=true}
description = "moduforge 传输系统"
authors = {workspace=true}
license = {workspace=true}
documentation = {workspace=true}
homepage = {workspace=true}
repository = {workspace=true}

[dependencies]
yrs = "0.23.5"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { workspace=true }
serde_json = { workspace=true }
uuid = { version = "1.0", features = ["v4"] }
anyhow = { workspace=true }
thiserror = { workspace=true }
tracing = "0.1"
parking_lot ={ workspace=true }
dashmap = { workspace=true }
chrono = { version = "0.4", features = ["serde"] }
im = "15.1"

moduforge-model = {version = "0.4.3", path = "../model"}
moduforge-state = {version = "0.4.3", path = "../state"}
moduforge-transform = {version = "0.4.3", path = "../transform"}
moduforge-core = {version = "0.4.3", path = "../core"}
moduforge-macros = {version = "0.4.3", path = "../macro"}
async-trait =  { workspace=true }
lazy_static =  { workspace=true }
once_cell =  { workspace=true }
